--- a/style.css
+++ b/style.css
@@ -36,14 +36,13 @@
     font-size: 2em;
     border-radius: 20px;
     background: linear-gradient(to right, #1fa2ff, #12d8fa, #a6ffcb);
-    color: white; /* Change text color for better contrast */
-    border: none; /* Remove default border */
+    color: white; 
+    border: none; 
     cursor: pointer;
-    margin: 10px; /* Add some space between buttons */
-    transition: background 0.3s ease; /* Smooth transition for hover effect */
+    margin: 10px; 
 }
 
 .buttons:hover {
-    background: rgba(255, 255, 255, 0.7); /* Change hover effect to a lighter gradient */
-    color: #1fa2ff; /* Change text color on hover for better visibility */
+    background: rgba(255, 255, 255, 0.7); 
+    color: #1fa2ff; 
 }
